--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
          <div class="row">
             <div class="my-auto col-9">
 
-               <button type="button" class="btn btn-primary"> Group One <a href="https://docs.google.com/forms/d/e/1FAIpQLSeqhvlh1HEzjk706BN7gkXe0IHo2WIufPvwGImps3rXwyStzw/viewform"></a></button>
-               <button type="button" class="btn btn-primary"> Group Two <a href="https://docs.google.com/forms/d/e/1FAIpQLSdNUcyY8TDEM3_j5p8CXmzUPWqoNRUy2KoGD_qVZ9Fmfq-oBg/viewform"></a></button>
-               <button type="button" class="btn btn-primary"> Group Three <a href="https://docs.google.com/forms/d/e/1FAIpQLSfljhM2iBzveicC2C8N8pg3enqm3izfSSzDzewSEVlBBv107A/viewform"></a></button>
+            <a type="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSeqhvlh1HEzjk706BN7gkXe0IHo2WIufPvwGImps3rXwyStzw/viewform"> Group One </a>
+<a a type="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdNUcyY8TDEM3_j5p8CXmzUPWqoNRUy2KoGD_qVZ9Fmfq-oBg/viewform"> Group Two </a>
+               <a type="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfljhM2iBzveicC2C8N8pg3enqm3izfSSzDzewSEVlBBv107A/viewform"> Group Three </a>
 
          
                <p class="mb-2">
