--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
       <section class="resume-section p-3 p-lg-5 d-column" id="about">
          <div class="row">
             <div class="my-auto col-9">
-<!-- 
+
             <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSeqhvlh1HEzjk706BN7gkXe0IHo2WIufPvwGImps3rXwyStzw/viewform"> Group One </a>
-<a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdNUcyY8TDEM3_j5p8CXmzUPWqoNRUy2KoGD_qVZ9Fmfq-oBg/viewform"> Group Two </a>
-               <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfljhM2iBzveicC2C8N8pg3enqm3izfSSzDzewSEVlBBv107A/viewform"> Group Three </a> -->
+            <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdNUcyY8TDEM3_j5p8CXmzUPWqoNRUy2KoGD_qVZ9Fmfq-oBg/viewform"> Group Two </a>
+               <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfljhM2iBzveicC2C8N8pg3enqm3izfSSzDzewSEVlBBv107A/viewform"> Group Three </a>
 
          
                <p class="mb-2">
