--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                   </br>
                   <span> Bld 534 </span>
                   </br>
-                  <span> English Language Institute </span>
-                  <br>
+                  <!-- <span> English Language Institute </span>
+                  <br> -->
                   <span>King Abdulaziz University</span>
                   </small>
                </div>
