--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
                      <thead>
                      </thead>
                      <tbody>
+                         <tr>
+                           
+                           <td> 5-11-2022: I was invited to moderate and speak about Arabic NLP in a Colloquium at Prince Sultan University</td>                        </tr>
                         <tr>
                            
                            <td> 5-8-2022: Sabq published a news <a href=" https://sabq.org/saudia/308b2mu9u8"> article </a> about the University of Melbourne Chancellor's Prize I received </small></td>
