--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
          <div class="row">
             <div class="my-auto col-9">
 
-             <a role="button" class="btn btn-primary" href="https://www.surveymonkey.com/r/GBLBNVZ"> Study</a>
+             <!-- <a role="button" class="btn btn-primary" href="https://www.surveymonkey.com/r/GBLBNVZ"> Study</a> -->
            
            
                <!-- <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdNUcyY8TDEM3_j5p8CXmzUPWqoNRUy2KoGD_qVZ9Fmfq-oBg/viewform"> Group Two </a>
