--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
             </ul>
          </div>
-      </nav> -->
+      </nav>
       <div class="container-fluid p-0">
       <section class="resume-section p-3 p-lg-5 d-column" id="about">
          <div class="row">
