--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <link href="css/resume.min.css" rel="stylesheet">
    </head>
    <body id="page-top">
-      <div> 
+      <!-- <div> 
       
       <a role="button" style="margin-bottom:800px; margin-top: 200px;" class="btn btn-primary" href="https://www.surveymonkey.com/r/GBLBNVZ"> Study</a>
-      </div>
+      </div> -->
        <nav class="navbar navbar-expand-lg bg-primary " id="sideNav"> 
          <h4 id="name"> Emad Alghamdi</h4>
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
