--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 
           </li>
       <li class="mb-3">
-       Yousef Altaher, Ali Fadel, Mazen Alotaibi, Mazen Alyazidi, Mishari Al-Mutairi, Mutlaq Aldhbuiub, Abdulrahman Mosaibah, Abdelrahman Rezk, Abdulrazzaq Alhendi, Mazen Abo Shal, Emad A Alghamdi, Maged S Alshaibani, Jezia Zakraoui, Wafaa Mohammed, Kamel Gaanoun, Khalid N Elmadani, Mustafa Ghaleb, Nouamane Tazi, Raed Alharbi, Maraim Masoud, Zaid Alyafea (In review).  Masader Plus: A New Interface for Exploring+ 500 Arabic NLP Datasets
+       Yousef Altaher, Ali Fadel, Mazen Alotaibi, Mazen Alyazidi, Mishari Al-Mutairi, Mutlaq Aldhbuiub, Abdulrahman Mosaibah, Abdelrahman Rezk, Abdulrazzaq Alhendi, Mazen Abo Shal, <b> Alghamdi, E.A </b>, Maged S Alshaibani, Jezia Zakraoui, Wafaa Mohammed, Kamel Gaanoun, Khalid N Elmadani, Mustafa Ghaleb, Nouamane Tazi, Raed Alharbi, Maraim Masoud, Zaid Alyafea (In review).  Masader Plus: A New Interface for Exploring+ 500 Arabic NLP Datasets
       </li>
       <li class="mb-3">
       Nawaz, S,  <b> Alghamdi, E.A </b>,  Srivastavac, N.,  Lodge, J., &  Corrin, L. (2022). Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education.
