--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                <!-- <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdNUcyY8TDEM3_j5p8CXmzUPWqoNRUy2KoGD_qVZ9Fmfq-oBg/viewform"> Group Two </a>
                   <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfljhM2iBzveicC2C8N8pg3enqm3izfSSzDzewSEVlBBv107A/viewform"> Group Three </a> -->
                <p class="mb-2">
-                  I am <strong> an assistant professor of computational linguistics </strong>at King Abdulaziz University. I am the <strong> director </strong> of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a>. My research interests lie at the intersection of Applied Linguistics, Human-Computer Interactions (HCI), and Machine Learning. 
+                  I am <strong> an assistant professor of computational linguistics </strong>at King Abdulaziz University. I am the <strong> director </strong> of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a>. My research interests lie at the intersection of Applied Artificial Intelligence, Human-Computer Interactions (HCI), and Ethical AI. 
                </p>
                </b>
                <p class="mb-2">
