--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    </head>
    <body id="page-top">
       <div> 
-         <a role="button" style="margin-bottom:800px; margin-top: 200px;" class="btn btn-primary" href="https://coruscating-clafoutis-3ec629.netlify.app/login"> Study</a>
+         <a role="button" style="margin-bottom:800px; margin-top: 200px;" class="btn btn-primary" href="https://coruscating-clafoutis-3ec629.netlify.app/"> Study</a>
          </div>
       <nav class="navbar navbar-expand-lg bg-primary " id="sideNav">
          <h4 id="name"> Emad Alghamdi</h4>
