--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   My PhD was awarded the University of Melbourne <strong> Chancellor’s Prize for excellence in PhD thesis. </strong>I was a member of the HCI Interactive Technologies Lab <a href="https://cis.unimelb.edu.au/hci/facilities/ixt-lab" target="_blank"> (IxT) </a> at the School of Computing and Information System.
                </p>
                <p class="mb-2"> 
-                  I am interested in building innovative tools. 
+                  I am interested in building innovative tools and applications.
                   Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University. 
                </p>
             </div>
