--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                </p>
                <p class="mb-2"> 
                   I am interested in building innovative tools and applications.
-                  Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University. 
+                  Before starting my PhD, I was the founding director of KAUx, a MOOC platform at King Abdulaziz University, and the founding CEO of dropzin (instant-shipping and delivery startup). 
                </p>
             </div>
             <!-- <div class="col-lg-2 col-sm-612colly">
