--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#dev">Personal Dev</a>
                </li>
-               <span class="d-none d-lg-block">
-               <img class="img-fluid img-profile mx-auto mb-2" src="img/Emad Alghamdi.jpeg" alt="Emad A Alghamdi">
-               </span>
+               <!-- <span class="d-none d-lg-block">
+               <img class="img-fluid img-profile mx-auto mb-2" src="img/me.jpg" alt="Emad A Alghamdi">
+             </span>  -->
                <br>
-               <li class="nav-item">
+               <!-- <li class="nav-item">
                   <a class="nav-link" href="img/resume_long.pdf"  target=”_blank”> > CV (PDF) </a>
-               </li>
+               </li> -->
             </ul>
          </div>
       </nav>
@@ -71,11 +71,11 @@
                <!-- <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSdNUcyY8TDEM3_j5p8CXmzUPWqoNRUy2KoGD_qVZ9Fmfq-oBg/viewform"> Group Two </a>
                   <a role="button" class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSfljhM2iBzveicC2C8N8pg3enqm3izfSSzDzewSEVlBBv107A/viewform"> Group Three </a> -->
                <p class="mb-2">
-                  I am <strong> an assistant professor of computational linguistics </strong>at King Abdulaziz University. I am the <strong> director </strong> of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a> and <a href="http://www.asas.ai" target="_blank"> ASAS AI</a>. My research interests lie at the intersection of Applied Artificial Intelligence, Human-Computer Interactions (HCI), and Ethical AI. 
+                  I am <strong> an assistant professor of computational linguistics </strong>at King Abdulaziz University. I am the <strong> director </strong> of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a> and <a href="http://www.asas.ai" target="_blank"> ASAS AI</a>. My research interests lie at the intersection of NLP, Applied Artificial Intelligence, Human-Computer Interactions (HCI), and Ethical AI. 
                </p>
                </b>
                <p class="mb-2">
-                  I hold a <strong> PhD </strong> in computational linguistics  from <strong> the University of Melbourne </strong> and I was supervised by <a href="https://findanexpert.unimelb.edu.au/profile/486-paul-gruba" target="_blank"> Dr. Paul Gruba </a> (Linguistics) and <a href="https://findanexpert.unimelb.edu.au/profile/710004-eduardo-velloso" target="_blank">  Dr. Edaurdo Velloso</a> (Computer Science).
+                  I hold a <strong> PhD </strong> in computational linguistics  from <strong> the University of Melbourne. </strong>
                   My PhD was awarded the University of Melbourne <strong> Chancellor’s Prize for excellence in PhD thesis. </strong>I was a member of the HCI Interactive Technologies Lab <a href="https://cis.unimelb.edu.au/hci/facilities/ixt-lab" target="_blank"> (IxT) </a> at the School of Computing and Information System.
                </p>
                <p class="mb-2"> 
