--- a/index.html
+++ b/index.html
@@ -74,13 +74,16 @@
                   I am <strong> an assistant professor of computational linguistics </strong>at King Abdulaziz University. I am the <strong> director </strong> of the <a href="http://www.ailla.tech" target="_blank"> AILLA Lab </a> and <a href="http://www.asas.ai" target="_blank"> ASAS AI</a>. My research interests lie at the intersection of NLP, Applied Artificial Intelligence, Human-Computer Interactions (HCI), and Ethical AI. 
                </p>
                </b>
+               <p class="mb-2"> I am co-leading the Arabic effort to build an open source dataset for Arabic in the <a href= “https://cohere.for.ai”  target="_blank"> C4AI </a> community and I am also a core member in the ARBML research community where I contribute to open research and tool development  <a href="https://arbml.github.io/website/" target="_blank"> ARBML </a>.</p>
                <p class="mb-2">
                   I hold a <strong> PhD </strong> in computational linguistics  from <strong> the University of Melbourne. </strong>
                   My PhD was awarded the University of Melbourne <strong> Chancellor’s Prize for excellence in PhD thesis. </strong>I was a member of the HCI Interactive Technologies Lab <a href="https://cis.unimelb.edu.au/hci/facilities/ixt-lab" target="_blank"> (IxT) </a> at the School of Computing and Information System.
                </p>
+
+
                <p class="mb-2"> 
                   I am interested in building innovative tools and applications.
-                  Before starting my PhD, I was the founding director of<a href="https://ctld.kau.edu.sa/Content-322-EN-258010" target="_blank"> KAUx </a>, a MOOC platform at King Abdulaziz University, and the founding CEO of dropzin (instant-shipping and delivery startup). 
+                  Before starting my PhD, I was the founding director of<a href="https://ctld.kau.edu.sa/Content-322-EN-258010" target="_blank"> KAUx, </a> a MOOC platform at King Abdulaziz University, and the founding CEO of dropzin (instant-shipping and delivery startup). 
                </p>
             </div>
             <!-- <div class="col-lg-2 col-sm-612colly">
