--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
                <p class="mb-2"> 
-                  I am interested in building innovative tools and applications.
+                  I love <strong> productivity </strong>, <strong> community building </strong> and <strong> talent management </strong>.
                   Before starting my PhD, I was the founding director of<a href="https://ctld.kau.edu.sa/Content-322-EN-258010" target="_blank"> KAUx, </a> a MOOC platform at King Abdulaziz University, and the founding CEO of dropzin (instant-shipping and delivery startup). 
                </p>
             </div>
