--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                   </br>
                   <a href="https://www.linkedin.com/in/emad-a-alghamdi/"  target=”_blank”> Linkedin </a>
                   </br>
-                  <a href="https://www.researchgate.net/profile/Emad-Alghamdi-3"  target=”_blank”> ResearchGate </a>
-                  </br>
+                  <!-- <a href="https://www.researchgate.net/profile/Emad-Alghamdi-3"  target=”_blank”> ResearchGate </a>
+                  </br> -->
                   <a href="https://scholar.google.com/citations?user=DKLKZqsAAAAJ&hl=en"  target=”_blank”> Google Scholar </a>
                   </br>
                   <a href="https://twitter.com/Emad_A_Alghamdi"  target=”_blank”> Twitter </a>
