--- a/index.html
+++ b/index.html
@@ -416,16 +416,17 @@
       <div class="resume-content mr-auto">
       <ui>
       <li class="mb-2">
-      <b> Alghamdi, E.A </b>. (in review). Leveraging ensemble machine learning and multimodal video complexity for better prediction of video difficulty in second language
+      <b> Alghamdi, E.A </b>. (2023). Leveraging ensemble machine learning and multimodal video complexity for better prediction of video difficulty in second language. 
       </li>
       <li class="mb-3">
       Yousef Altaher, Ali Fadel, Mazen Alotaibi, Mazen Alyazidi, Mishari Al-Mutairi, Mutlaq Aldhbuiub, Abdulrahman Mosaibah, Abdelrahman Rezk, Abdulrazzaq Alhendi, Mazen Abo Shal, <b> Alghamdi, E.A </b>, Maged S Alshaibani, Jezia Zakraoui, Wafaa Mohammed, Kamel Gaanoun, Khalid N Elmadani, Mustafa Ghaleb, Nouamane Tazi, Raed Alharbi, Maraim Masoud, Zaid Alyafea (In review).  Masader Plus: A New Interface for Exploring+ 500 Arabic NLP Datasets
       </li>
       <li class="mb-3">
-      Nawaz, S,  <b> Alghamdi, E.A </b>,  Srivastavac, N.,  Lodge, J., &  Corrin, L. (2022). Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education.
+      Nawaz, S,  <b> Alghamdi, E.A </b>,  Srivastavac, N.,  Lodge, J., &  Corrin, L. (2022). Understanding the role of AI and learning analytics techniques in addressing task difficulties in STEM education. 
+Artificial Intelligence in STEM Education. 
       </li>
       <li class="mb-2">
-      Matthews, J., Masrai, A., Lange, K., McLean, S., <b> Alghamdi, E. A. </b>, Kim, K., Shinhara, Y., Tada, S. (Accepted). Using meaning recall to explore links between aural lexical knowledge and L2 listening: A replication and extension study. TESOL Quarterly 
+      Matthews, J., Masrai, A., Lange, K., McLean, S., <b> Alghamdi, E. A. </b>, Kim, K., Shinhara, Y., Tada, S. (2023). Using meaning recall to explore links between aural lexical knowledge and L2 listening: A replication and extension study. TESOL Quarterly 
       </li>
       <li class="mb-2">
       <b> Alghamdi, E. A. </b> (In review). What makes video difficult for language learners? 
@@ -434,7 +435,7 @@
       <b> Alghamdi, E. A. </b>  Book review: Computational psychometrics: new methodologies for a new generation of digital learning and assessment.
       </li>
       <li class="mb-2">
-      <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (In press). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
+      <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (2023). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
       </li>
       <li class="mb-2">
       <b> Alghamdi, E. A. </b>, Gruba, P., & Velloso, E. (2022). The relative contribution of verbal complexity to second language video lectures difficulty assessment. <i> The Modern Language Journal.</i>
