--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
       Full PhD Scholarship by KAU
       </li>
       <li>
-      <i class="fa-li fa fa-trophy text-warning"></i>
+      <!-- <i class="fa-li fa fa-trophy text-warning"></i>
       Certificate of appreciation awarded by the Dean of the English Language Institute, KAU, for my diligent works and efforts for the year 2013
-      </li>
+      </li> -->
       <li>
       <i class="fa-li fa fa-trophy text-warning"></i>
       Certificate of appreciation awarded by the Saudi Cultural Attaché in Washington, D.C for my diligent works and efforts as a president of the Saudi Club at Missouri State University.
