--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 
                <p class="mb-2"> 
-                  I love <strong> community building </strong> and <strong> talent management </strong>.
+                  I love <strong> community building </strong> and <strong> talent management. </strong>
                   Before starting my PhD, I was the founding director of<a href="https://ctld.kau.edu.sa/Content-322-EN-258010" target="_blank"> KAUx, </a> a MOOC platform at King Abdulaziz University, and the founding CEO of dropzin (instant-shipping and delivery startup). 
                </p>
             </div>
@@ -414,7 +414,11 @@
       <h3 class="mb-5 title_center">Publication </h3>
       <div class="resume-item d-flex flex-column flex-md-row mb-5">
       <div class="resume-content mr-auto">
+         
       <ui>
+      <li class="mb-2">
+      <b> Alghamdi, E.A </b>. J Zakraoui, FA Abanmy (2023). Domain Adaptation for Arabic Machine Translation: The Case of Financial Texts. <a href="https://arxiv.org/abs/2309.12863" target="_blank"> https://arxiv.org/abs/2309.12863</a></li> 
+      </li>
       <li class="mb-2">
       <b> Alghamdi, E.A </b>. (2023). Leveraging ensemble machine learning and multimodal video complexity for better prediction of video difficulty in second language. 
       </li>
@@ -434,6 +438,7 @@ Artificial Intelligence in STEM Education.
       <li class="mb-2">
       <b> Alghamdi, E. A. </b>  Book review: Computational psychometrics: new methodologies for a new generation of digital learning and assessment.
       </li>
+   
       <li class="mb-2">
       <b> Alghamdi, E. A. </b>, Gruba, P., Marsi, A., & Velloso, E. (2023). The use of lexical complexity for assessing difficulty in instructional videos. <i> Language Learning & Technology.</i>
       </li>
@@ -442,6 +447,10 @@ Artificial Intelligence in STEM Education.
       <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773" target="_blank">https://onlinelibrary.wiley.com/doi/full/10.1111/modl.12773</a></li> 
       <li class="mb-2">
       <b> Alghamdi, E. A., </b> Velloso, E. & Gruba, P. (2021). AUVANA: An automated video analysis tool for visual complexity. Preprint.
+      </li>
+         <li class="mb-2">
+      <b> Alghamdi, E. A. </b> (2021). Automated video difficulty assessment. [PhD Thesis]</i>  
+               <a href="https://minerva-access.unimelb.edu.au/handle/11343/279376?show=full" target="_blank">  https://minerva-access.unimelb.edu.au/handle/11343/279376?show=full</a>
       </li>
       <li class="mb-3">
       <b> Alghamdi, E. A. </b>(2018). Effects of Using Multimodal Glosses in Video Games to Enhance Incidental
