--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
          Shivalika Singh, Freddie Vargus, Daniel D’souza, ... <b> Alghamdi, E.A </b>,  … Sara Hooker. "Aya Dataset: An Open-Access Collection for Multilingual Instruction Tuning. <a href="href{https://arxiv.org/pdf/2402.06619.pdf" target="_blank">https://arxiv.org/pdf/2402.06619.pdf</a>
              </li>
              <li class="mb-2">
-               Mina Lee, Katy Gero, John Chung, Simon Buckingham Shum, Vipul Raheja, Hua Shen, Subhashini Venugopalan, Thiemo Wambsganss, David Zhou, <b> Alghamdi, E.A </b>,  Roy Pea, ... Pao Siangliulue. A Design Space for Intelligent and Interactive Writing Assistants. CHI 24. 
+               Mina Lee, Katy Gero, John Chung, Simon Buckingham Shum, Vipul Raheja, Hua Shen, Subhashini Venugopalan, Thiemo Wambsganss, David Zhou, <b> Alghamdi, E.A </b>,  Roy Pea, ... Pao Siangliulue. A Design Space for Intelligent and Interactive Writing Assistants. CHI 24. <a href="https://arxiv.org/abs/2403.14117" target="_blank">https://arxiv.org/abs/2403.14117</a>
              </li>
       <li class="mb-2">
       <b> Alghamdi, E.A </b>. J Zakraoui, FA Abanmy (2023). Domain Adaptation for Arabic Machine Translation: The Case of Financial Texts. <a href="https://arxiv.org/abs/2309.12863" target="_blank"> https://arxiv.org/abs/2309.12863</a></li> 
